--- a/styles/components/_image.scss
+++ b/styles/components/_image.scss
@@ -61,6 +61,13 @@
 			img {
 				width: 100%;
 			}
+
+			transition:transform 0.4s ease;
+		}
+
+		&.fit:hover {
+		    -webkit-transform:scale(1.5);
+		    transform:scale(1.5);
 		}
 
 		&.main {
