--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -6,6 +6,8 @@
 
 /* Type */
 
+@use 'sass:math';
+
 	html {
 		font-size: 16pt;
 
@@ -138,7 +140,7 @@
 		border-left: solid (_size(border-width) * 4) _palette(border);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
-		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
+		padding: (math.div(_size(element-margin), 4)) 0 (math.div(_size(element-margin), 4)) _size(element-margin);
 	}
 
 	code {
